# atomica

./: Cargo.toml
src/: camera.rs  main.rs  main_circle.frag  main_circle.vert  main_circle.vert.spirv  particle.rs  particle_trail.rs  trail.frag  trail.frag.spirv  trail.vert  trail.vert.spirv
