[package]
name = "atomica"
version = "0.1.0"
edition = "2018"
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.7.2"
cgmath = "0.18.0"
color-eyre = "0.5.11"
futures = "0.3.18"
sdl2 = {version = "0.35.1", features = ["raw-window-handle"]}
wgpu = {version = "0.11.0", features = ["spirv"]}
env_logger = "0.9"